# netshell

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
src/: client.c  main.c  server.c
src/win32/: win32_common.c
